--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage":"https://agashi01.github.io/face-detection/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -11,14 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
-    "react-toastify": "^10.0.5",
-    "react-transition-group": "^4.4.5",
-    "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "react-toastify": "^10.0.5",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
@@ -28,6 +27,7 @@
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "gh-pages": "^6.2.0",
     "prettier": "^3.3.3",
     "vite": "^5.1.4"
   },
