--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://agashi01.github.io/car-shop-frontend/",
+  "homepage": "/car-shop-frontend/",
   "scripts": {
     "dev": "cross-env NODE_OPTIONS=--openssl-legacy-provider vite",
     "build": "vite build",
